[package]
name = "arduino-on-rust_template"
version = "0.1.0"
authors = ["loxygenK <loxygen.k@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
arduino-uno = { git = "https://github.com/Rahix/avr-hal" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
